Fix overlapping feedback message over nav

--- a/assets/css/components/_nav.scss
+++ b/assets/css/components/_nav.scss
@@ -1,5 +1,5 @@
 .nav {
-    z-index: 2;
+    z-index: 3;
     margin: 0 -15px;
     position: fixed;
     left: 0;
