--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -640,7 +640,7 @@ label {
     bottom: 24px; } }
 
 .nav {
-  z-index: 2;
+  z-index: 3;
   margin: 0 -15px;
   position: fixed;
   left: 0;
@@ -1753,7 +1753,7 @@ label {
   margin: 15px auto;
   padding: 10px;
   padding-right: 30px;
-  z-index: 10;
+  z-index: 2;
   opacity: 1;
   max-height: 50px;
   transition: opacity 0.2s ease-in-out, padding 0.2s ease-in-out 0.2s, max-height 0.2s ease-in-out 0.2s; }
