--- a/assets/css/templates/_admin.scss
+++ b/assets/css/templates/_admin.scss
@@ -161,7 +161,7 @@
 	margin: 15px auto;
 	padding: 10px;
 	padding-right: 30px;
-	z-index: 10;
+	z-index: 2;
 	opacity: 1;
 	max-height: 50px;
 	transition: opacity 0.2s ease-in-out,
